_includes/main.css
/* ... */
.footer-main > .link {
  display: inline;
}
.footer-main > .link > .icon {
  width: 15px !important;
  fill: #aaa !important;
  -webkit-transition: ease-in-out all 0.3s;
          transition: ease-in-out all 0.3s;
  position: relative;
  top: 3px;
  display: inherit;
  margin: 0;
}
.footer-main > .link > .icon:hover {
  fill: #3399ff !important;
}
.footer-main > .extra {
  color: #aaa;
  margin-top: 0;
}
.footer-main > .extra > .link {
  color: #222;
  text-decoration: none;
  border-bottom: 1px solid transparent;
  -webkit-transition: ease-in-out all 0.3s;
          transition: ease-in-out all 0.3s;
  padding-bottom: 1px;
}
.footer-main > .extra > .link:hover {
  border-color: #aaa;
}
.header-home {
  display: block;
  margin: 0 auto;
  text-align: center;
}
.header-home > .link > .selfie {
  width: 190px;
  max-width: 100%;
  margin-bottom: 25px;
  border-radius: 100%;
  -webkit-transition: all 0.2s;
          transition: all 0.2s;
  box-shadow: 0;
  opacity: 1;
}
.header-home > .link > .selfie:hover {
  box-shadow: 0 0px 4px 0 rgba(0,0,0,0.18), 0 0px 12px 0 rgba(0,0,0,0.15);
  opacity: 0.8;
}
.header-home > .title {
  font-size: 4rem;
  margin: 0 0 0px;
}
.header-home > .description {
  font-size: 1.85rem;
  font-weight: 300;
  font-style: normal;
  color: #777;
  width: 70%;
  margin: 0 auto 10px;
}
.header-home > .description a {
  font-weight: 200;
}
.nav > .list,
.nav-home > .list {
  list-style: none;
  margin: 0;
  padding: 0 13px 0;
}
.nav > .list > .item,
.nav-home > .list > .item {
  display: inline-block;
}
.nav > .list > .item > .link,
.nav-home > .list > .item > .link {
  display: inline-block;
  font-weight: 300;
  font-size: 1.2rem;
  padding: 20px 10px;
  text-decoration: none;
}
.nav {
  right: 0;
  top: 0;
  position: absolute;
}
.nav > .list {
  padding: 0 13px 0;
}
.nav > .list > .item > .link {
  font-size: 1.8rem;
  padding: 20px 10px;
  color: #3399ff;
}
.nav-home {
  margin-top: 40px;
  text-align: center;
}
.nav-home > .list {
  padding: 0;
}
.nav-home > .list > .item > .link {
  font-size: 1.8rem;
  padding: 7px 15px;
  margin: 0;
  border-radius: 4%;
  -webkit-transition: all 0.4s ease-in-out;
          transition: all 0.4s ease-in-out;
  width: 75px;
  color: #3399ff;
}
.nav-home > .list > .item > .link:hover {
  color: #4b0082;
}
.nav > .list > .item > .link:hover {
  color: #4b0082;
}
.evidence {
  background-image: -webkit-linear-gradient(top, rgba(39,243,106,0.15), rgba(39,243,106,0.15));
  background-image: linear-gradient(to bottom, rgba(39,243,106,0.15), rgba(39,243,106,0.15));
  color: #222;
}
.star > .url > .title {
  width: auto !important;
  display: inline;
  background-image: -webkit-linear-gradient(top, rgba(39,243,106,0.15), rgba(39,243,106,0.15));
  background-image: linear-gradient(to bottom, rgba(39,243,106,0.15), rgba(39,243,106,0.15));
}
.twitter-tweet {
  margin: 10px auto;
}
.icon {
  display: inline-block;
  width: 17px;
  height: 17px;
  fill: #000;
  text-align: center;
  color: #000;
  margin: 7px auto;
}
.caption {
  position: relative;
  top: 1rem;
  left: 0;
  right: 0;
  margin: 0 auto;
  width: 100%;
  text-align: center;
  font-size: 1.3rem;
}
.bigger-image {
  min-width: 130%;
  margin: 5rem 0 5rem -15%;
}
@media only screen and (max-width: 400px) {
  .bigger-image {
    min-width: 114%;
    margin: 2rem 0 2rem -7%;
  }
}
@media only screen and (min-width: 400px) and (max-width: 1050px) {
  .bigger-image {
    min-width: 114%;
    margin: 2rem 0 2rem -7%;
  }
}
.breaker {
  height: 1px;
  margin: 6rem auto;
  width: 100%;
}
.breaker:before {
  content: "• • •";
  width: 100%;
  text-align: center;
  display: block;
  color: #aaa;
  letter-spacing: 4px;
  position: relative;
  top: -8px;
}
.pagination {
  width: 95%;
  margin: 3rem auto 0;
  text-align: center;
}
.pagination > .page_number {
  display: inline-block;
  font-size: 1.3rem;
}
.pagination > .previous,
.pagination > .next {
  display: inline-block;
  font-size: 1.8rem;
  position: relative;
  top: 1px;
  padding: 1px 9px;
}
.pagination > .hidden {
  visibility: hidden;
}
.related {
  margin: 5rem 0 -5rem;
}
.share {
  float: right;
  width: 40%;
  display: inline;
  text-align: right;
  position: relative;
  top: -10px;
}
@media only screen and (max-width: 400px) {
  .share {
    width: 100%;
    display: block;
    top: 0;
    text-align: left;
    float: none;
    margin-top: 5px;
  }
}
@media only screen and (min-width: 400px) and (max-width: 1050px) {
  .share {
    width: 100%;
    display: block;
    top: 0;
    text-align: left;
    float: none;
    margin-top: 5px;
  }
}
.share > .twitter,
.share > .facebook {
  display: inline;
  vertical-align: middle;
  font-size: 13px;
  font-weight: 700;
  color: #fff;
  padding: 6px 10px;
  border-radius: 3px;
  margin-left: 5px;
  text-decoration: none;
}
@media only screen and (max-width: 400px) {
  .share > .twitter,
  .share > .facebook {
    margin: 0 5px 10px 0;
  }
}
@media only screen and (min-width: 400px) and (max-width: 1050px) {
  .share > .twitter,
  .share > .facebook {
    margin: 0 5px 10px 0;
  }
}
.share > .twitter {
  background: #4fafed;
}
.share > .facebook {
  background: #4361b3;
}
.share svg {
  fill: #fff;
  position: relative;
  top: 3px;
  margin: 0;
  margin-right: 4px;
  display: inherit;
}
@media only screen and (min-width: 780px) {
  .side-by-side {
    width: 130%;
    margin: 6rem 0 6rem -15%;
  }
}
@media only screen and (max-width: 780px) {
  .side-by-side {
    width: 100%;
    margin: 4rem 0;
  }
}
.side-by-side > .toleft,
.side-by-side > .toright {
  display: inline-block;
  width: 47.5%;
}
@media only screen and (max-width: 780px) {
  .side-by-side > .toleft img,
  .side-by-side > .toright img {
    text-align: center;
    display: block;
    margin: 0 auto;
  }
}
@media only screen and (min-width: 780px) {
  .side-by-side > .toleft {
    margin-right: 2%;
  }
}
@media only screen and (max-width: 780px) {
  .side-by-side > .toleft {
    width: 100%;
    margin: 0 0 4rem 0;
  }
}
/* ... */

